--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,14 +4,24 @@ page-home {
         padding-left: 1px;
         padding-right: 16px;
     }
-    .bg-light {
-        background-color:#037DC5;
-      }
+    .bgBook{
+       background-color: blueviolet;
+    }
+    .bgDel{
+        background-color: lightgreen;
+    }
+    h1, h2, h3, h4, h5, h6 {
+        margin-top: -6px;
+        line-height: 36px;
+    }
     ion-slides {
         height: auto;
         .slide-image {
             display: block;
         }
+    }
+    .scroll-item .item-box p {
+        margin-bottom: 7px !important;
     }
     .swiper-pagination {
         text-align: left;
@@ -36,7 +46,8 @@ page-home {
         width: 140px;
         text-align: center;
         .item-box {
-            background: radial-gradient(circle, rgba(148,177,26,1) 13%, rgba(207,226,84,1) 75%);
+            //background: radial-gradient(circle, rgba(148,177,26,1) 13%, rgba(207,226,84,1) 75%);
+            background-color: white;
             margin: 0px 4px;
             padding: 10px;
             border-radius: 5px;
@@ -55,7 +66,7 @@ page-home {
     .heading {
         font-weight: 600;
         display: flex;
-        color: white;
+        color: black;
         padding-top: 5px;
         span {
             font-weight: 600;
