--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -55,7 +55,9 @@ page-welcome {
       }
 
     .bgimg {
-        background-image: url(../assets/imgs/bg.jpg);      
+        background: url(../assets/imgs/bg.jpg) no-repeat;      
+        background-size: contain ;
+        background-color: #d1e8e5;
       }
    
         .logo {
